manifests/blocky/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: blocky
  labels:
    name: blocky
