manifests/blocky/redis-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: blocky
  labels:
    app.kubernetes.io/name: redis
spec:
  type: ClusterIP
  ports:
  - name: redis
    port: 6379
    targetPort: redis
    protocol: TCP
  selector:
    app.kubernetes.io/name: redis
